azure-aks-kubernetes-masterclass/09-Ingress-Basic/practice1/03-ingress-basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  labels:
    name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1-nginx-clusterip-service
            port: 
              name:
              number: 80
